themes/csl/style.css
/* ... */
.term-seasonal article {
  background-size: auto 350px;
  background-position: center top;
  background-repeat: no-repeat;
  padding-top: 350px; }
  @media (min-width: 750px) {
    .term-seasonal article {
      color: #ffffff;
      height: 900px;
      background-size: cover; } }
  .term-seasonal article .content {
    overflow-wrap: break-word; }

.term-seasonal .entry-wrapper {
  padding-left: 2.5%;
  padding-right: 2.5%; }
  @media (min-width: 750px) {
    .term-seasonal .entry-wrapper {
      position: absolute;
      top: 100px;
      display: inline-block;
      background: rgba(0, 0, 0, 0.5);
      width: 60%;
      padding-right: 5%; } }

.sub-nav {
  display: none;
  position: fixed;
  width: 100%;
  z-index: 1001;
  color: #ffffff;
  background-color: rgba(0, 0, 0, 0.5);
  list-style: none;
  padding-left: 2.5%; }
  @media (min-width: 750px) {
    .sub-nav {
      display: block; } }
  .sub-nav li {
    height: 2rem;
    line-height: 2rem;
    display: inline-block;
    font-size: 20px;
    text-transform: uppercase; }
    .sub-nav li::after {
      content: '|';
      margin: 0 1.25rem;
      font-weight: 400; }
    .sub-nav li:last-of-type::after {
      content: ''; }
    .sub-nav li a {
      text-decoration: none;
      color: white; }
      .sub-nav li a:visited {
        color: white; }
  .sub-nav .current-event-page {
    font-weight: 900; }

.term-seasonal .title {
  text-transform: uppercase;
  margin-bottom: 0; }

.term-seasonal .alt-title {
  margin-left: 5px;
  font-weight: 400; }

@media (min-width: 750px) {
  .term-seasonal .date {
    font-size: 25px; } }

.term-seasonal .entry-content {
  margin-top: 0; }

.term-seasonal .entry-content .time,
.term-seasonal .entry-content .date,
.term-seasonal .entry-content .location {
  width: 100%;
  display: block; }

.term-seasonal .entry-content .time {
  font-weight: bold; }

@media (min-width: 750px) {
  .term-seasonal .widget-area {
    display: none; } }

.term-seasonal .widget-area .csl-social-media-class {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -ms-flex-wrap: wrap;
      flex-wrap: wrap;
  margin: 0 1rem;
  z-index: 1; }
  .term-seasonal .widget-area .csl-social-media-class h2 {
    width: 100%;
    font-size: 0.95rem;
    margin-bottom: 0; }
  .term-seasonal .widget-area .csl-social-media-class a {
    color: #000000;
    text-decoration: none;
    font-size: 1rem; }
  .term-seasonal .widget-area .csl-social-media-class a:hover {
    color: #1DAFB8; }
  .term-seasonal .widget-area .csl-social-media-class .fa {
    font-size: 1.5rem;
    padding-right: 1rem; }
  .term-seasonal .widget-area .csl-social-media-class a:nth-child(3) {
    padding-top: 0.5rem; }

.term-seasonal .widget-area .social-media-container {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-align: baseline;
      -ms-flex-align: baseline;
          align-items: baseline;
  margin-right: 1rem; }

@media screen and (min-width: 1024px) {
  .sub-nav {
    padding-top: 1rem; } }

/* MOBILE HEADER	*/
.display {
  display: block; }

.header-widget-area {
  padding-right: 1%; }
  .header-widget-area .csl-social-media-class {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -webkit-box-orient: horizontal;
    -webkit-box-direction: normal;
        -ms-flex-direction: row;
            flex-direction: row;
    font-size: 1.25rem;
    margin-bottom: 0;
    -webkit-box-align: end;
        -ms-flex-align: end;
            align-items: flex-end;
    height: 4.5rem; }
  .header-widget-area .social-media-container {
    padding-right: 0.5rem; }
  .header-widget-area a {
    color: white; }
  .header-widget-area a:hover {
    color: #1DAFB8; }
  .header-widget-area p {
    display: none; }

.line1, .line2, .line3 {
  margin-top: 5px;
  background-color: white;
  width: 25px;
  height: 3px;
  display: block;
  position: relative;
  opacity: 1.0;
  border-radius: 15%;
  -webkit-transition: all .3s;
  transition: all .3s; }

.menu-toggle {
  display: none; }

.toggle-open {
  -ms-flex-preferred-size: 100%;
      flex-basis: 100%;
  outline: transparent;
  border: none;
  background: none;
  z-index: 9999; }

.mobile-menu {
  display: none;
  z-index: 2;
  font-size: 1rem;
  width: 100%;
  height: auto;
  background: #1DAFB8;
  position: fixed;
  padding-top: 5.75rem;
  text-align: left;
  min-height: 79vh;
  max-height: 100vh;
  overflow-y: scroll; }

.mobile-menu ul {
  text-transform: uppercase;
  margin: 0;
  padding: 0; }
  .mobile-menu ul li:nth-child(odd) {
    background-color: #18949a; }

.mobile-menu li {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  padding: 1rem 0 1rem 0;
  padding-left: 1rem; }

.mobile-menu a {
  width: 100%;
  text-decoration: none;
  color: white; }

.mobile-menu-filler {
  height: 56px;
  background-color: transparent; }

header {
  display: inline-block;
  font-size: 12px; }

.main-navigation {
  display: -webkit-box;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
      -ms-flex-pack: justify;
          justify-content: space-between; }
  .main-navigation .social-icons {
    display: -webkit-box;
    display: -ms-flexbox;
    display: flex;
    -ms-flex-item-align: center;
        align-self: center;
    margin-top: 2rem; }
    .main-navigation .social-icons .fa {
      color: white;
      font-size: 1.5rem;
      padding-right: 1rem; }

.site-header {
  width: 100%;
  background: black;
  height: 5.75rem;
  position: fixed;
  z-index: 99999999999; }

.header-teal {
  background: #1DAFB8; }

.content-area {
  padding-top: 5.75rem; }

.header-logo {
  height: 40px;
  width: 135px;
  position: absolute;
  top: 34%;
  margin-left: auto;
  margin-right: auto;
  left: 25%;
  right: 25%; }

.desktop-site-header {
  display: none; }

.menu-menu-1-container {
  visibility: hidden;
  width: 0; }

.desktop-header-logo {
  display: none; }
/* ... */

